--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "test-work-express",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc --build",
-    "start": "node ./dist/index.js",
-    "dev": "nodemon ./src/index.ts"
-  },
-  "author": "Timur",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "class-validator": "^0.14.1",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "pg": "^8.13.1",
-    "typeorm": "^0.3.20",
-    "winston": "^3.17.0"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^22.10.2",
-    "nodemon": "^3.1.9",
-    "typescript": "^5.7.2"
-  }
+    "name": "test-work-express",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc --build",
+        "start": "node ./dist/index.js",
+        "dev": "nodemon ./src/index.ts",
+        "format": "prettier --write ."
+    },
+    "author": "Timur",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "class-validator": "^0.14.1",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0",
+        "pg": "^8.13.1",
+        "typeorm": "^0.3.20",
+        "winston": "^3.17.0"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/morgan": "^1.9.9",
+        "@types/node": "^22.10.2",
+        "nodemon": "^3.1.9",
+        "prettier": "^3.4.2",
+        "typescript": "^5.7.2"
+    }
 }
