--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "class-validator": "^0.14.1",
-        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-validator": "^7.2.0",
         "jsonwebtoken": "^9.0.2",
-        "morgan": "^1.10.0",
         "pg": "^8.13.1",
-        "typeorm": "^0.3.20",
-        "winston": "^3.17.0"
+        "typeorm": "^0.3.20"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
@@ -29,8 +26,10 @@
         "@types/jsonwebtoken": "^9.0.7",
         "@types/morgan": "^1.9.9",
         "@types/node": "^22.10.2",
+        "morgan": "^1.10.0",
         "nodemon": "^3.1.9",
         "prettier": "^3.4.2",
-        "typescript": "^5.7.2"
+        "typescript": "^5.7.2",
+        "winston": "^3.17.0"
     }
 }
